crates/check_cli/tests/snapshots/main_commands_lint/apply_noop.snap
---
source: crates/check_cli/tests/snap_test.rs
expression: content
---
## `fix.js`

```js
(1 >= 0)
```

# Emitted Messages

```block
Checked 1 file in <TIME>. No fixes applied.
```
