crates/check_cli/tests/snapshots/main_commands_lint/check_stdin_shows_parse_diagnostics.snap
---
source: crates/check_cli/tests/snap_test.rs
expression: content
---
# Input messages

```block

server.get('/', async () => {
	return { hello: 'world' };
});

const = ""; 
```

# Emitted Messages

```block

server.get('/', async () => {
	return { hello: 'world' };
});

const = ""; 
```
