crates/check_cli/tests/snapshots/main_commands_lint/check_stdin_write_unsafe_successfully.snap
---
source: crates/check_cli/tests/snap_test.rs
expression: redactor(content)
---
# Input messages

```block
function f() {var x=1; return{x}} class Foo {}
```

# Emitted Messages

```block
function _f() {var x=1; return{x}} class Foo {}
```
