crates/check_cli/tests/snapshots/main_commands_lint/config_recommended_group.snap
---
source: crates/check_cli/tests/snap_test.rs
expression: content
---
## `check.json`

```json
{
  "linter": {
    "rules": {
      "recommended": false,
      "correctness": {
        "recommended": true
      }
    }
  }
}
```

## `check.js`

```js
new Symbol("");
```

# Termination Message

```block
lint ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some errors were emitted while running checks.
  


```

# Emitted Messages

```block
check.js:1:1 lint/correctness/noInvalidBuiltinInstantiation  FIXABLE  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Use Symbol() instead of new Symbol().
  
  > 1 │ new Symbol("");
      │ ^^^^^^^^^^^^^^
  
  i Unsafe fix: Remove new keyword.
  
    1 │ new·Symbol("");
      │ ----           

```

```block
Checked 1 file in <TIME>. No fixes applied.
Found 1 error.
```
